wwr/styles/rafting.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
:root {
    --primary-color: #ffffff;
    --secondary-color: #FFD33D;
    --accents1-color: #0c094b;
    --heading-font: "Times New Roman", "Georgia", serif;
    --body-font: Arial, Helvetica, sans-serif;
}
body {
    font-family: var(--body-font);
    color: var(--accents1-color);
    background-color: var(--primary-color);
    line-height: 1.6;
}
header {
    display: grid;
    grid-template-columns: 40% 60%;
    padding: 20px;
    justify-content: center;
    align-items: center; 
}
.menu {
    list-style: none;
    display: flex;
    gap: 50px;
    margin-right: 250px;
}
.menu li a {
    text-decoration: none;
    color: var(--accents1-color);
    font-weight: bold;
    font-size: 1.1rem;
    padding: 5px;
    transition: color 0.3s ease;
}
.menu li a:hover {
    color: var(--secondary-color);
}
.hero {
    position: relative;
}

.hero img {
    width: 100%;
    height: auto;
}
.hero h1 {
    position: absolute;
    top: 20px;
    width: 100%;
    padding: 16px;
    text-align: center;
    opacity: 0.60;
    font-size: 1.4rem;
    font-family: var(--heading-font);
    background-color: var(--secondary-color);
    color: var(--accents1-color);
} 
.contact {
    text-align: center;
    font-size: large;
    background-color: var(--secondary-color);
    font-family: var(--heading-font);
    margin: 20px auto;
    border-radius: 6px;
    width: 100%;
    max-width: 1000px;
}
article {
    position: absolute;
    width: 100%;
    bottom: 50px;
    left:0;
    right: 0;
    padding: 16px;
    margin-right: 125px;
    background-color: var(--secondary-color);
    opacity: 0.80;
    text-align: center;
}
article img{
    float: right;
    max-width: 300px;
    padding: 20px;
}
article p {
    text-align: center;
    margin-top: 15px;
}
.history-section {
    padding: 20px;
    text-align: center;
    background-color: var(--secondary-color);
    color: var(--accents1-color);
    margin: 20px auto;
    border-radius: 6px;
    width: 90%;
    max-width: 1000px;
}
.history-grid {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 1rem;
    align-items: center;
    margin-top: 1rem;
}
.history-grid img {
    width: 400px;
    justify-content: center;
    align-items: center;
}
.history-grid figcaption {
    opacity: 20%;
    
}

.history-section h2 {
    font-family: var(--heading-font);
    margin-bottom: 10px;
}
.adventure-section {
    padding: 20px;
    text-align: center;
    background-color: var(--secondary-color);
    color: var(--accents1-color);
    margin: 20px auto;
    border-radius: 6px;
    width: 90%;
    max-width: 1000px;
}
.adventure-section h2 {
    font-family: var(--heading-font);
}
.gallery {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 1rem;
  margin-top: 1rem;
}
.gallery figure img {
    border-radius: 20%;
}
.gallery figure {
  text-align: center;
}
footer {
    background: var(--primary-color);
    padding: 16px;
    border-top: 2px solid var(--secondary-color);
}
.footer-container {
    display: grid;
    grid-template-columns: 80% 20%;
}
.footer-container p {
    margin-left: 50%;
    font-size: 0.9rem;
}
.socialmedia {
    display: flex;
    gap: 12px;
}
.socialmedia a img {
    width: 35px;
    height: auto;
    transition: transform 0.3s ease;
}
.socialmedia a img:hover {
    transform: scale(1.1);
}
fieldset {
    border: none;
}
.form {
    flex:1;
    max-width: 450px;
    display: flex;
    flex-direction: column;
    gap: 20px;
}
.form input,
.form textarea,
.form button {
  padding: 8px;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.form button {
  background: var(--accents1-color);
  cursor: pointer;
  color: var(--primary-color);
  transition: background 0.3s ease;
}

.form button:hover {
  background: var(--secondary-color);
  color: var(--accents1-color);
}

.contact-section {
    display:flex;
    justify-content: center;
    align-items: flex-start;
    gap: 20px;                
    padding: 20px;
    border:none;
}
.contact-section iframe {
    border: 0;
}
fieldset legend {
    font-weight: bold;
}

.message {
     display:flex;
     align-items: flex-start;
     justify-content: flex-start;
     justify-content: space-between;
     margin-bottom: 1rem;
     
}
.message .purpose{
    margin-top: 20px;
    font-weight: bold;
}
.message .message-options {
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: 0.5em;
    margin-left: 15px;
}
.contact-item {
    display:flex;
    align-items: flex-start;
    margin-top: 15px;
}
.contact-item label {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-right: 190px;
}
.typehere textarea{
    width: 90%;
    margin-bottom: 1rem;
}

/* Home page */
.hero2 {
    position: relative;
}

.hero2 img {
    width: 100%;
    height: auto;
}
.hero2 h1 {
    position: absolute;
    top: 50px;
    width: 100%;
    padding: 16px;
    text-align: center;
    font-size: 4rem;
    font-family: var(--heading-font);
    color: var(--primary-color);
} 

.hero2 p {
    position: absolute;
    top: 120px;
    width: 100%;
    margin-top: 25px;
    padding: 10px;
    text-align: center;
    font-size: 1.5rem;
    font-family: var(--heading-font);
    color: var(--primary-color);
}

.btn1{
    display: inline-block;
    position: absolute;
    top: 50%;
    left: 45%;
    background: var(--accents1-color);
    cursor: pointer;
    color: var(--primary-color);
    transition: background 0.3s ease;
    padding: 12px;
    border-radius: 4px;
    height: 50px;
    font-family: var(--heading-font);
    font-size: large;
    text-decoration: none;
    text-align: center;
}
.btn1:hover {
  background: var(--secondary-color);
  color: var(--accents1-color);
}
/* newsletter section */

.grid-item {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 1rem;
    align-items: center;
    margin-top: 1rem;
    padding: 20px;
    text-align: center;
    background-color: var(--secondary-color);
    color: var(--accents1-color);
    margin: 20px auto;
    border-radius: 6px;
    width: 90%;
    max-width: 1000px;
}
.item1 {
  margin-bottom: 20px;
}

.item1 img {
    width: 100%;
    height: 200px;
    object-fit: cover;
    display: block;
}
.item1 figcaption {
    opacity: 20%;
    margin: 10px;
}
.item1 p {
    text-align: center;
    margin-top: 80px;
    padding: 15px;

}
.newsletter-item2{
    display: flex;
    flex-direction: column;
    gap: 10px;
    padding: 20px;
    margin-left: 20px;
}
.newsletter-item2 img {
    width: 100%;
    height: auto;
}
.subscribe-item2 label {
    display: flex;
    border: none;
    margin: 10px;
    gap: 40px;
}
.subscribe-item2 input {
    flex: 1;
    max-width: 50%;
}
.subscribe-item2 button {
    background: var(--accents1-color);
    cursor: pointer;
    color: var(--primary-color);
    transition: background 0.3s ease;
    padding: 10px;
    margin-right: 30px;
    margin-bottom: 25px;
    
}
/* Review Section */
.socialmedia-review {
    padding: 20px;
    text-align: center;
    background-color: var(--secondary-color);
    color: var(--accents1-color);
    margin: 20px auto;
    border-radius: 6px;
    width: 90%;
    max-width: 1000px;
}
.socialmedia-review h2 {
    font-family: var(--heading-font);
}
.review-item {
    display: grid;
    grid-template-columns: repeat(4, 10%);
    margin-top: 1rem;
    justify-content: center;
}
.review-item figure {
  text-align:center;
}

.socialmedia-review p {
    justify-content: center;
    margin: 30px;
}
.socialmedia-review button {
    background: var(--accents1-color);
    cursor: pointer;
    color: var(--primary-color);
    padding: 10px;
    margin-bottom: 15px;
}
/* Trips Section */

.container-trip {
    display:grid;
    grid-template-columns: repeat(2, 450px);
    justify-content: center;
    grid-gap: 25px;
    margin: 2rem auto;
    max-width: 900px;
    grid-template-areas: 
    "header header"
    "trip1."
    "trip2."
    "trip3."
    "trip4."
    ;
}
.item {
    background-color: var(--accents1-color);
    color: var(--primary-color);
    text-align: center;
    padding: 10px;
}
.header {
    grid-area: header;
    background-color: var(--secondary-color);
    font-size: xx-large;
    font-family: var(--heading-font);
}
.trip1 img{
    grid-area: trip1;
    justify-content: center;
    margin-top: 10px;
    margin-bottom: 10px;
    height: 150px;
    object-fit:cover;
    display: block;
    width: 100%;

}
.trip1 h2 {
    display: flex;
    justify-content:center;
    color: var(--secondary-color);
    margin-bottom: 15px;
}

.trip2 img{
    grid-area: trip2;
    justify-content: center;
    margin-top: 10px;
    margin-bottom: 10px;
    height: 150px;
    object-fit:cover;
    display: block;
    width: 100%;
}
.trip2 h2 {
    display: flex;
    justify-content:center;
    color: var(--secondary-color);
    margin-bottom: 15px;
}
.trip3 img{
    grid-area: trip1;
    justify-content: center;
    margin-top: 10px;
    margin-bottom: 10px;
    height: 150px;
    object-fit:cover;
    display: block;
    width: 100%;

}
.trip3 h2 {
    display: flex;
    justify-content:center;
    color: var(--secondary-color);
    margin-bottom: 15px;
}
.trip4 img{
    grid-area: trip1;
    justify-content: center;
    margin-top: 10px;
    margin-bottom: 10px;
    height: 150px;
    object-fit:cover;
    display: block;
    width: 100%;

}
.trip4 h2 {
    display: flex;
    justify-content:center;
    color: var(--secondary-color);
    margin-bottom: 15px;
}

/* table content */

.trip-table {
  margin: 2rem auto;
  max-width: 950px;
  text-align: center;
}

.trip-table table {
  width: 100%;
  border-collapse: collapse;
}

.trip-table th,
.trip-table td {
  padding: 12px;
  border: 1px solid #ccc;
}

.trip-table th {
  background-color: var(--accents1-color);
  text-transform: uppercase;
  letter-spacing: 1px;
}

.trip-table thead {
    color:#ffffff
}
.header {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.btn {
    display: inline-block;
    background-color: var(--accents1-color);
    color: var(--primary-color);
    padding: 10px 20px;
    border-radius: 5px;
    text-decoration: none;
    font-weight: bold;
    font-size: small;
}
.btn:hover {
  color: var(--secondary-color);
}

